# modview

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/modview/: __about__.py  __init__.py  core.py
